--- a/_posts/2025-04-25-151.md
+++ b/_posts/2025-04-25-151.md
@@ -59,14 +59,18 @@ newsletter: |
   ## Short & Sweet
 
 
-  ### Szymon poleca: []()
+  ### Szymon poleca: [Ranking Prompt Detectorów](https://github.com/lakeraai/pint-benchmark)
 
+  Jeszcze nie poradziliśmy sobie do końca z SQL Injection a mamy kolejną grupę ataków polegających na wykorzystywaniu wejścia do aplikacji do uzyskania dostępu do danych do których nie powinniśmy tego dostępu mieć. Tym razem mowa o LLM i prompt injection. 
+  Jak sobie z tym atakami radzić? Przez dodanie detectorów. Jaki detector wybrać? No i od tego mamy link z porównaniem.
+  A jakbyście byli ciekawi jak to działa to https://www.infoq.com/articles/large-language-models-prompt-injection-stealing/
+
+
+  ### Łukasz poleca: [Nauka pisania Agentów AI prawie HardWay](https://ampcode.com/how-to-build-an-agent)
+
+  Dobry wstępniak pokazujący jak zakodować własnego Agenta. Prawie Hard Way, bo jak dacie coś bardziej skomplikowanego, to rozbijecie się od masę edge casów, ale na start super pokazuje jak podejść do tematu i zrozumieć pierwszą pętlę.
   
-
-
-  ### Łukasz poleca: []()
-
-  
+  It's an LLM, a loop, and enough tokens - uważajcie, bo niedozorowana pętla przy nauce kosztowała ze mnie z 50 dolców ;-) W przeciwieństwie do chmury, na szczęście jest opcja prepaid 
 
 
 
