--- a/_posts/2025-05-02-152.md
+++ b/_posts/2025-05-02-152.md
@@ -6,7 +6,7 @@ description:
 episode: "152"
 tags: []
 spreaker: 65821745
-apple: 
+apple: https://podcasts.apple.com/pl/podcast/vibe-coding-2025h1/id1477067604?i=1000705807808&uo=4
 newsletter: |
   Cześć! 👋 ✨
 
@@ -45,13 +45,13 @@ newsletter: |
   ➡️ [Odsłuchaj na stronie](https://patoarchitekci.io/152)
 
 
-  ➡️ [Spotify](https://open.spotify.com/episode/)
+  ➡️ [Spotify](https://open.spotify.com/episode/5JAY4IXUwfGLs19fqVHRi2)
 
 
-  ➡️ [Apple Podcasts]()
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/vibe-coding-2025h1/id1477067604?i=1000705807808&uo=4)
 
 
-  ➡️ [YouTube](https://youtu.be/OKVjNOkvnhw)
+  ➡️ [YouTube](https://www.youtube.com/watch?v=OKVjNOkvnhw)
 
 
 
