--- a/_posts/2025-05-09-153.md
+++ b/_posts/2025-05-09-153.md
@@ -1,25 +1,24 @@
 ---
 layout: post
-title: 'Google Cloud Next 2025
-'
+title: '#153 Google Cloud Next 2025'
 date: 2025-05-09 08:00:00 +0200
 description: 
 episode: "153"
 tags: []
 spreaker: 65993114
-apple: 
-spotify: https://open.spotify.com/episode/
-youtube: https://youtu.be/h5Rwd7Ty7kg
+apple: https://podcasts.apple.com/pl/podcast/google-cloud-next-2025/id1477067604?i=1000706931175&uo=4
 newsletter: |
   Cześć! 👋 ✨
-  
+
+
   **Google Cloud Next 2025** otwiera sezon konferencji hyperscalerów z **Agentic AI** 🤖 na pierwszym planie. Google zaprezentował przełomowy **Agent to Agent Protocol** 🔗, który stanowi fundament komunikacji między agentami. Czeka nas rok pełen "Agentic, Agentic, Agentic" 🔥.
   
   W odcinku analizujemy **TPU Ironwood** (10x wydajniejsze niż poprzednia generacja) i **Google Agentspace** 🧠. Omawiamy także **Unified Security**, **Gemini Code Assist** oraz kompatybilność **Firestone z MongoDB**. **Chrome Enterprise Browser** 🔍 zaskakuje możliwościami przeszukiwania zasobów lokalnych.
   
   Chcesz wiedzieć, czy **ADK** przetrwa dłużej niż inne projekty Google? 💬 Posłuchaj naszej dyskusji o przyszłości **agent-to-agent communication** i zrozum, dlaczego wszyscy dostawcy chmury będą teraz kopiować te rozwiązania 🚀.
   
-  
+
+
   **Patoszkolenia!** 🔥🚀
   
   Zanim wyłączysz laptopa na wakacje, mamy dla Ciebie dwie NOWOŚCI szkoleniowe! 📣 Pytania? Napisz do Mikołaja: mikolaj.szczerbicki@protopia.tech lub zadzwoń +48 667 013 893
@@ -36,27 +35,54 @@ newsletter: |
   
   Zapisz się już dziś! Miejsca się kończą!
   
-  
+
+
+
+
   ## Odcinek na stronie i materiały do niego ⬇️
-  
+
+
   ➡️ [Odsłuchaj na stronie](https://patoarchitekci.io/153)
-  ➡️ [Spotify](https://open.spotify.com/episode/)
-  ➡️ [Apple Podcasts](#)
-  ➡️ [YouTube](https://youtu.be/h5Rwd7Ty7kg)
-  
+
+
+  ➡️ [Spotify](https://open.spotify.com/episode/3sQ0SnhS4cdFy3O5RtlEzg)
+
+
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/google-cloud-next-2025/id1477067604?i=1000706931175&uo=4)
+
+
+  ➡️ [YouTube](https://www.youtube.com/watch?v=h5Rwd7Ty7kg)
+
+
+
+
   ## Short & Sweet
+
+
   ### Szymon poleca: [Systematyka baz danych](https://thenewstack.io/introduction-to-databases/)
+
   O ile trochę pomyj na The New Stack wylaliśmy to zdarza im się popełnić coś dobrego. Ten artykuł jest tego przykładem. 
   Dobre wprowadzenie do historii i systematyki baz danych. O ile najwięcej wyniosą z niego raczej osoby zaczynające to nawet seniorom polecam "przekartkowanie" bo może nieco uporządkować wiedzę. 
+
+
   ### Łukasz poleca: [Czy warto zamykać się na jeden język?!](https://www.architecture-weekly.com/p/why-we-should-learn-multiple-programming)
+
   Na Discordzie była długa burzliwa dyskusja wywołana Short #71. Na bazie tego Oskar w spisał swój punkt widzenia na ten temat. Prawdopodobnie w odcinku zabrakło z mojej strony czegoś, na co mamy wspólne zdanie z Oskarem, czyli "...Transitioning takes time. You might learn Go's syntax in a week, but understanding its ecosystem and idioms is a much longer journey. Most people reach a productivity plateau after 3-6 months, but true fluency takes longer."
 
+
+
+
   ### 🤝 Dołącz do Discord 👉 [https://discord.gg/78zPcEaP22](https://discord.gg/78zPcEaP22)
-  
+
+
+
   ### 🏢 Patron odcinka
+
   Słuchasz Patoarchitektów dzięki PROTOPII – firmie, w której Łukasz i Szymon działają na co dzień, wspierając zespoły IT na każdym etapie: od projektowania, przez wdrożenia i migracje, aż po optymalizację i zabezpieczenia. Oferujemy też mentoring i szkolenia dostosowane do potrzeb każdej firmy, niezależnie od wielkości. Sprawdź nas: [protopia.tech](https://protopia.tech/)
-  
+
+
   PS. Masz pytania? Pisz śmiało po drugiej stronie to nie bot na bazie GPT czy Claude 😎
+
 ---
 **Google Cloud Next 2025** otwiera sezon konferencji hyperscalerów z **Agentic AI** 🤖 na pierwszym planie. Google zaprezentował przełomowy **Agent to Agent Protocol** 🔗, który stanowi fundament komunikacji między agentami. Czeka nas rok pełen "Agentic, Agentic, Agentic" 🔥.
 
@@ -71,29 +97,18 @@ Discord 👉 [https://discord.gg/78zPcEaP22](https://discord.gg/78zPcEaP22)
 
 Linki i ciekawe znaleziska:
 
-- [Google Unified Security](https://cloud.google.com/security/google-unified-security?hl=en)
-
-- [Ironwood: The first Google TPU for the age of inference](https://blog.google/products/google-cloud/ironwood-tpu-age-of-inference)
-
-- [Firebase Studio lets you build full-stack AI apps with Gemini](https://cloud.google.com/blog/products/application-development/firebase-studio-lets-you-build-full-stack-ai-apps-with-gemini)
-
-- [About AI/ML model inference on GKE](https://cloud.google.com/kubernetes-engine/docs/concepts/machine-learning/inference)
-
 - [Nie dla mięczaków: Patoszkolenia, które zmieniają zasady gry!](https://patoarchitekci.io/szkolenia)
-
-- [AlloyDB AI natural language overview](https://cloud.google.com/alloydb/docs/ai/natural-language-overview)
-
-- [About GKE Inference Gateway](https://cloud.google.com/kubernetes-engine/docs/concepts/about-gke-inference-gateway)
-
-- [Announcing the Agent2Agent Protocol (A2A)](https://developers.googleblog.com/en/a2a-a-new-era-of-agent-interoperability)
-
-- [Announcing Firestore with MongoDB compatibility](https://cloud.google.com/blog/products/databases/announcing-firestore-with-mongodb-compatibility)
-
-- [Google Agentspace](https://cloud.google.com/products/agentspace?hl=en)
-
-- [Agent Development Kit: Making it easy to build multi-agent applications](https://developers.googleblog.com/en/agent-development-kit-easy-to-build-multi-agent-applications)
-
+- [Ironwood: The first Google TPU for the age of inference](https://blog.google/products/google-cloud/ironwood-tpu-age-of-inference)
+- [Google Unified Security](https://cloud.google.com/security/google-unified-security?hl=en)
 - [Live API reference](https://cloud.google.com/vertex-ai/generative-ai/docs/model-reference/multimodal-live)
+- [AlloyDB AI natural language overview](https://cloud.google.com/alloydb/docs/ai/natural-language-overview)
+- [Announcing the Agent2Agent Protocol (A2A)](https://developers.googleblog.com/en/a2a-a-new-era-of-agent-interoperability)
+- [About AI/ML model inference on GKE](https://cloud.google.com/kubernetes-engine/docs/concepts/machine-learning/inference)
+- [About GKE Inference Gateway](https://cloud.google.com/kubernetes-engine/docs/concepts/about-gke-inference-gateway)
+- [Google Agentspace](https://cloud.google.com/products/agentspace?hl=en)
+- [Announcing Firestore with MongoDB compatibility](https://cloud.google.com/blog/products/databases/announcing-firestore-with-mongodb-compatibility)
+- [Agent Development Kit: Making it easy to build multi-agent applications](https://developers.googleblog.com/en/agent-development-kit-easy-to-build-multi-agent-applications)
+- [Firebase Studio lets you build full-stack AI apps with Gemini](https://cloud.google.com/blog/products/application-development/firebase-studio-lets-you-build-full-stack-ai-apps-with-gemini)
 
 ### Transkrypcja
 
@@ -258,4 +273,3 @@ Linki i ciekawe znaleziska:
 **Szymon Warda**: Wydaje mi się, że jeszcze giełda to pokaże, co będzie się działo tak naprawdę. Dobrze. To tyle. Na razie.
 
 **Łukasz Kałużny**: Trzymajcie się, na razie.
- 
