--- a/_posts/2025-05-16-154.md
+++ b/_posts/2025-05-16-154.md
@@ -1,42 +1,72 @@
 ---
 layout: post
-title: 'Short #72: MCP we Frameworkach, Redis 8, Nats vs CNCF, Zarządzanie Czasem
-'
+title: '#154 Short #72: MCP we Frameworkach, Redis 8, Nats vs CNCF, Zarządzanie Czasem'
 date: 2025-05-16 08:00:00 +0200
 description: 
 episode: "154"
 tags: []
 spreaker: 66099405
-apple: 
-spotify: https://open.spotify.com/episode/
-youtube: https://youtu.be/72Iz3XnZ2cI
+apple: https://podcasts.apple.com/pl/podcast/short-72-mcp-we-frameworkach-redis-8-nats-vs-cncf-zarz%C4%85dzanie/id1477067604?i=1000708693210&uo=4
 newsletter: |
   Cześć! 👋 ✨
-  
+
+
   **Redis 8, NATS, MCP i dramaty licencyjne** czekają w nowym Short #72! Frameworki wspierają Model Context Protocol, a Redis przechodzi na wirusową licencję AGPL. Zespół analizuje kontrowersje NATS vs CNCF.
   
   Łukasz krytykuje automatyczne wystawianie endpointów REST jako narzędzi MCP. Szymon prezentuje **techniki zarządzania czasem** - od Macierzy Eisenhowera po metodę Pomodoro. Prowadzący bezlitośnie punktują błędy w raporcie InfoQ o trendach.
   
   Zastanawiasz się, jak uniknąć problemów licencyjnych w swoich projektach? Sprawdź, czy nie używasz _wirusowego_ Redisa! A może warto zastosować technikę 3x3x3 do planowania zadań? Ten odcinek pomoże Ci **zoptymalizować czas** i uniknąć pato-architektury!
   
+
+
   
-  
-  
+
+
+
+
   ## Odcinek na stronie i materiały do niego ⬇️
-  
+
+
   ➡️ [Odsłuchaj na stronie](https://patoarchitekci.io/154)
-  ➡️ [Spotify](https://open.spotify.com/episode/)
-  ➡️ [Apple Podcasts](#)
-  ➡️ [YouTube](https://youtu.be/72Iz3XnZ2cI)
-  
+
+
+  ➡️ [Spotify](https://open.spotify.com/episode/6zy2ZD8VviixwYVcppV76X)
+
+
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/short-72-mcp-we-frameworkach-redis-8-nats-vs-cncf-zarz%C4%85dzanie/id1477067604?i=1000708693210&uo=4)
+
+
+  ➡️ [YouTube](https://www.youtube.com/watch?v=72Iz3XnZ2cI)
+
+
+
+
   ## Short & Sweet
 
+
+  ### Szymon poleca: []()
+
+  
+
+
+  ### Łukasz poleca: []()
+
+  
+
+
+
+
   ### 🤝 Dołącz do Discord 👉 [https://discord.gg/78zPcEaP22](https://discord.gg/78zPcEaP22)
-  
+
+
+
   ### 🏢 Patron odcinka
+
   Słuchasz Patoarchitektów dzięki PROTOPII – firmie, w której Łukasz i Szymon działają na co dzień, wspierając zespoły IT na każdym etapie: od projektowania, przez wdrożenia i migracje, aż po optymalizację i zabezpieczenia. Oferujemy też mentoring i szkolenia dostosowane do potrzeb każdej firmy, niezależnie od wielkości. Sprawdź nas: [protopia.tech](https://protopia.tech/)
-  
+
+
   PS. Masz pytania? Pisz śmiało po drugiej stronie to nie bot na bazie GPT czy Claude 😎
+
 ---
 **Redis 8, NATS, MCP i dramaty licencyjne** czekają w nowym Short #72! Frameworki wspierają Model Context Protocol, a Redis przechodzi na wirusową licencję AGPL. Zespół analizuje kontrowersje NATS vs CNCF.
 
@@ -51,31 +81,19 @@ Discord 👉 [https://discord.gg/78zPcEaP22](https://discord.gg/78zPcEaP22)
 
 Linki i ciekawe znaleziska:
 
-- [NATS.io  ](https://www.linkedin.com/posts/wmorgan_natsio-activity-7321587393126408192-Qytt)
-
-- [Statement on proposed changes to CNCF NATS.io licensing and ownership](https://wasmcloud.com/blog/2025-04-23-statement-on-nats)
-
-- [Protecting NATS and the integrity of open source: CNCF&#8217;s commitment to the community  ](https://www.cncf.io/blog/2025/04/24/protecting-nats-and-the-integrity-of-open-source-cncfs-commitment-to-the-community)
-
 - [Nie dla mięczaków: Patoszkolenia, które zmieniają zasady gry! - Patoarchitekci](https://patoarchitekci.io/szkolenia)
-
-- [Build a Model Context Protocol nullMCP) server in C# - .NET Blog](https://devblogs.microsoft.com/dotnet/build-a-model-context-protocol-mcp-server-in-csharp)
-
-- [InfoQ Software Architecture and Design Trends Report - 2025 - InfoQ](https://www.infoq.com/articles/architecture-trends-2025)
-
-- [Integrating Model Context Protocol Tools with Semantic Kernel: A Step-by-Step Guide  ](https://devblogs.microsoft.com/semantic-kernel/integrating-model-context-protocol-tools-with-semantic-kernel-a-step-by-step-guide)
-
-- [Redis is now available under the the OSI-approved AGPLv3 open source license.](https://redis.io/blog/agplv3)
-
 - [Dynamic Tool Updates in Spring AI's Model Context Protocol](https://spring.io/blog/2025/05/04/spring-ai-dynamic-tool-updates-with-mcp)
-
-- [Time Management](https://mikefisher.substack.com/p/time-management)
-
-- [Looking Ahead with Clarity and Purpose for NATS.io  ](https://www.synadia.com/blog/synadia-response-to-cncf?trk=feed-detail_main-feed-card_feed-article-content)
-
-- [About  ](https://www.synadia.com/about)
-
+- [Build a Model Context Protocol nullMCP) server in C# - .NET Blog](https://devblogs.microsoft.com/dotnet/build-a-model-context-protocol-mcp-server-in-csharp)
+- [Integrating Model Context Protocol Tools with Semantic Kernel: A Step-by-Step Guide  ](https://devblogs.microsoft.com/semantic-kernel/integrating-model-context-protocol-tools-with-semantic-kernel-a-step-by-step-guide)
 - [Redis Launches Vector Sets and a New Tool for Semantic Caching of LLM Responses](https://thenewstack.io/redis-launches-vector-sets-and-a-new-tool-for-semantic-caching-of-llm-responses)
+- [Redis is now available under the the OSI-approved AGPLv3 open source license.](https://redis.io/blog/agplv3)
+- [Protecting NATS and the integrity of open source: CNCF&#8217;s commitment to the community  ](https://www.cncf.io/blog/2025/04/24/protecting-nats-and-the-integrity-of-open-source-cncfs-commitment-to-the-community)
+- [Statement on proposed changes to CNCF NATS.io licensing and ownership](https://wasmcloud.com/blog/2025-04-23-statement-on-nats)
+- [NATS.io  ](https://www.linkedin.com/posts/wmorgan_natsio-activity-7321587393126408192-Qytt)
+- [Looking Ahead with Clarity and Purpose for NATS.io  ](https://www.synadia.com/blog/synadia-response-to-cncf?trk=feed-detail_main-feed-card_feed-article-content)
+- [About  ](https://www.synadia.com/about)
+- [Time Management](https://mikefisher.substack.com/p/time-management)
+- [InfoQ Software Architecture and Design Trends Report - 2025 - InfoQ](https://www.infoq.com/articles/architecture-trends-2025)
 
 ### Transkrypcja
 
@@ -350,4 +368,3 @@ Linki i ciekawe znaleziska:
 **Łukasz Kałużny**: Trzymajcie się, na razie.
 
 **Szymon Warda**: Hej.
- 
