Update newsletter title and description; add local environment support and testing script

--- a/_newsletters/2025-07-09-4.md
+++ b/_newsletters/2025-07-09-4.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Pato Short Mail #4"
+title: "Pato Summer Short Mail #4 🌞🏖️"
 date: 2025-07-09 08:00:00 +0200
 newsletter_id: 4
 recommended_episode: 126
@@ -33,7 +33,6 @@ Chociaż można wyciągnąć z tego dobrą myśl, że framework'i agentowe to ja
 
 Aktualnie uważam jednak, że nie ma wartości w pisaniu agentowego frameworka samemu, inaczej niż tylko żeby zrozumieć jak działa pattern agenta. Warto wybrać po prostu gotową platformę lub lekkie rozwiązanie bez ton nawarstwiających się zależności, jak to mamy w LangChain czy LlamaIndex. Nie ma srebrnej kuli 🎯
 ### Warte uwagi Factory 🛠️
-
 **Factor 2: Own your prompts** 📝 - W produkcji prompt to Twój kod biznesowy, a framework'i generujące prompty automatycznie tworzą nieprzewidywalne zachowania.
 
 **Factor 3: Own your context window** 💰 - Framework'i rzucają do kontekstu wszystko "na wszelki wypadek", co prowadzi do eksplozji kosztów i degradacji jakości odpowiedzi.
@@ -43,6 +42,7 @@ Aktualnie uważam jednak, że nie ma wartości w pisaniu agentowego frameworka s
 **Factor 8: Own your control flow** ⚡ - LLM może sugerować, ale nie może decydować o przepływie biznesowym w systemach produkcyjnych.
 
 **Factor 9: Compact errors into context** ⚠️ - Stack trace zajmuje setki tokenów, ale agent potrzebuje tylko istoty problemu.
+
 **I najważniejszy! Factor 10: Small, focused agents** 🎯 - To zasada Single Responsibility Principle dla agentów, którą można patrzeć przez pryzmat DDD - w tym wypadku agent nie jest odpowiedzialny za domenę, ale jeden bounded context = jeden agent.
 
 
