Add social media post generation and RSS feed support

--- a/_newsletters/2025-07-09-4.md
+++ b/_newsletters/2025-07-09-4.md
@@ -50,6 +50,9 @@ Aktualnie uważam jednak, że nie ma wartości w pisaniu agentowego frameworka s
 
 ## Szymon: [Jak rozmawiać i być zrozumianym](https://www.goodreads.com/book/show/22085568-the-culture-map)
 
+<br>
+
+![Jak rozmawiać i być zrozumianym](https://patoarchitekci.io/assets/img/mail/2025-07-09-szymon.jpg)
 
 Nie dość, że ja i Łukasz wiele razy powtarzamy jak ważne są umiejętności miękkie to jest to też motyw który przewija się bardzo w naszych wywiadach. Tu moja ulubiona książka która bardzo mocno pomaga w rozwijaniu tych umiejętności i to nie tylko w ramach wielu kultur. Dobra lektura na lato :)
 
