--- a/_social_posts/2025-07-09-4-lukasz-1.md
+++ b/_social_posts/2025-07-09-4-lukasz-1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "📚 12-Factor Agents od Łukasz"
+title: "📱 12-Factor Agents od Łukasz"
 date: 2025-07-09 08:00:00 +0200
 person: lukasz
 person_name: Łukasz
@@ -10,7 +10,7 @@ image_url: https://patoarchitekci.io/assets/img/mail/2025-07-09-lukasz.png
 image_ext: png
 ---
 
-📚 12-Factor Agents od Łukasz
+📱 12-Factor Agents od Łukasz
 
 Jeśli zauważyliście podczas słuchania Pato, to jestem fanem standaryzacji, bo po prostu ułatwia życie i pozwala ukrócić dyskusje.
 
@@ -34,7 +34,7 @@ Factor 8: Own your control flow ⚡ - LLM może sugerować, ale nie może decydo
 
 Factor 9: Compact errors into context ⚠️ - Stack trace zajmuje setki tokenów, ale agent potrzebuje tylko istoty problemu.
 
-I najważniejszy! Factor 10: Small, focused agents 🎯 - To zasada Single Responsibility Principle dla agentów, którą można patrzeć przez pryzmat DDD - w tym wypadku agent nie jest odpowiedzialny za domenę, ale jeden bounded context = jeden agent.
+I najważniejszy! Factor 10: Small, focused agents 🎯 - To zasada Single Responsibility Principle dla agentów, którą można patrzeć przez pryzmat DDD - w tym wypadku agent nie jest odpowiedzialny za domenę, ale jeden bounded context = jeden agent, albo jeszcze mniej.
 
 🔗 https://github.com/humanlayer/12-factor-agents
 
