--- a/_social_posts/2025-07-09-4-szymon-2.md
+++ b/_social_posts/2025-07-09-4-szymon-2.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "🚀 Jak rozmawiać i być zrozumianym od Szymon"
+title: "⚡ Jak rozmawiać i być zrozumianym od Szymon"
 date: 2025-07-09 08:00:00 +0200
 person: szymon
 person_name: Szymon
@@ -10,7 +10,7 @@ image_url: https://patoarchitekci.io/assets/img/mail/2025-07-09-szymon.jpg
 image_ext: jpg
 ---
 
-🚀 Jak rozmawiać i być zrozumianym od Szymon
+⚡ Jak rozmawiać i być zrozumianym od Szymon
 
 Nie dość, że ja i Łukasz wiele razy powtarzamy jak ważne są umiejętności miękkie to jest to też motyw który przewija się bardzo w naszych wywiadach. Tu moja ulubiona książka która bardzo mocno pomaga w rozwijaniu tych umiejętności i to nie tylko w ramach wielu kultur. Dobra lektura na lato :)
 
