Enhance episode metadata and add newsletter support: update YouTube, Spotify, and Apple links; introduce MailerLite RSS format; improve Airtable integration for episode publishing.

--- a/content/episodes/165.md
+++ b/content/episodes/165.md
@@ -8,7 +8,10 @@ seo_keywords: "DORA metrics, AI development, developer productivity, platform en
 
 # Hugo fields
 youtube_id: "WBxu9z8U9Fo"
-youtube_url: "https://www.youtube.com/embed/WBxu9z8U9Fo?enablejsapi=1"
+youtube_url: "https://www.youtube.com/watch?v=WBxu9z8U9Fo"
+youtube_embed_url: "https://www.youtube.com/embed/WBxu9z8U9Fo?enablejsapi=1"
+spotify_url: "https://open.spotify.com/episode/6lUsf1SK3JbHU6MJ74L2rq"
+apple_id: "https://podcasts.apple.com/us/podcast/2025-dora-state-of-ai-assisted-software-development/id1477067604?i=1000731093549&uo=4"
 
 # Spreaker data (technical only - for Schema.org, not user-facing)
 duration: "PT25M57S"
@@ -27,6 +30,45 @@ intro: |
   Z całego raportu da się wyciągnąć jedną stronę wartości: **DORA AI Capabilities Model** (polityki AI, kontrola wersji, praca w małych porcjach) i miejsca amplifikacji **AI** (code review, **CI/CD**, **IaC**). Reszta? **Value Stream Management** i inne **buzzwordy**, które **"każdy kawałek Google'a musiał dorzucić, żeby sprawdzić swoje KPI"**.
   
   Czy raport o metrykach **DevOps** zamienił się w **FOMO** maszynkę dla **C-level**? Sprawdź, zanim ktoś przybiegnie z **tymi** **"siedmioma praktykami, które oddzielają AI Winners od AI Disasters"**. 🎯
+  
+
+# Newsletter content (multiline)
+newsletter: |
+  # Nagłówek H1
+  
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+  
+  ## Nagłówek H2
+  
+  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+  
+  ### Nagłówek H3
+  
+  Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.
+  
+  #### Nagłówek H4
+  
+  Totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+  
+  ## Lista numerowana
+  
+  1. Pierwszy element listy numerowanej z długim opisem lorem ipsum dolor sit amet
+  2. Drugi element z dodatkowymi szczegółami consectetur adipiscing elit
+  3. Trzeci element zawierający sed do eiusmod tempor incididunt
+  4. Czwarty element z informacją ut labore et dolore magna aliqua
+  5. Piąty element końcowy quis nostrud exercitation ullamco
+  
+  ## Lista punktowana
+  
+  - Pierwszy punkt z opisem lorem ipsum dolor sit amet consectetur
+  - Drugi punkt zawierający adipiscing elit sed do eiusmod tempor
+  - Trzeci punkt z tekstem incididunt ut labore et dolore magna
+  - Czwarty punkt opisujący aliqua ut enim ad minim veniam
+  - Piąty punkt z informacją quis nostrud exercitation ullamco laboris
+  
+  ## Podsumowanie
+  
+  Nisi ut aliquip ex ea commodo consequat duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
   
 
 # Links for the episode
